cluster/apps/weave/weave-scope-app.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: weave-scope-app
  namespace: weave

spec:
  template:
    spec:
      containers:
        - name: app
          args:
            - --weave=false
            - --mode=app
