cluster/apps/weave/weave-scope-cluster-agent.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: weave-scope-cluster-agent
  namespace: weave

spec:
  template:
    spec:
      containers:
        - name: scope-cluster-agent
          args:
            - --weave=false
            - --mode=probe
            - --probe-only
            - --probe.kubernetes.role=cluster
            - --probe.http.listen=:4041
            - --probe.publish.interval=5000ms
            - --probe.spy.interval=5s
            - --probe.no-controls=true
            - weave-scope-app.weave.svc.cluster.local:80
